src/escjava/tags/escjava-2-0-5/Escjava/test/escjava/test/test50/NormalError.java
/**
 ** This file tests parsing of erroneous, normal escjava annotation comments
 **/

class NormalError {

    void wizard() {
	/*@(fobar*/      // error
    }
}
